fix overflow

--- a/webapps/SharedResources/nb/css/layouts/navbar.css
+++ b/webapps/SharedResources/nb/css/layouts/navbar.css
@@ -201,7 +201,7 @@ button.btn-side-nav-toggle {
     display: none;
 }
 
-@media ( min-width: 1024px) {
+@media ( min-width: 1025px) {
     .navbar .dropdown .dropdown-menu {
         display: inline-block;
     }
